chore(fix) : hero section texts spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -192,6 +192,11 @@ header {
 
     .desktop-break {
       display: block;
+      margin-bottom: 10px; 
+      
+      &:last-child {
+        margin-bottom: 0; 
+      }
     }
   }
 
@@ -204,6 +209,11 @@ header {
 
     .desktop-desc {
       display: block;
+      margin-bottom: 5px; 
+      
+      &:last-child {
+        margin-bottom: 0; 
+      }
     }
   }
   &__email {
@@ -248,6 +258,11 @@ header {
 
       .mobile-break {
         display: block;
+        margin-bottom: 8px; 
+        
+        &:last-child {
+          margin-bottom: 0; 
+        }
       }
     }
 
@@ -263,6 +278,11 @@ header {
 
       .mobile-desc {
         display: block;
+        margin-bottom: 2.5px; 
+        
+        &:last-child {
+          margin-bottom: 0; 
+        }
       }
     }
 
